[package]
name = "minesweeper"
version = "1.5.0"
edition = "2021"
description = "A minesweeper clone. Very inventive."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
resource = "0.5.0"
sdl2 = { version = "0.35.2", features = ["image", "ttf"] }
